static/css/clean-blog.css
/* ... */
.blair {
  font-family: 'BlairMdITC TT';
  margin-bottom: -5px;
}

.ME {
  letter-spacing: -9px;
  overflow: visible;
}

h1 .ME {
  letter-spacing: -30px;
  overflow: visible;
}

@media only screen and (max-width: 449px) {
  h1 .ME {
    letter-spacing: -19px;
    overflow: visible;
  }
}

@media only screen and (max-width: 500px) {
  .menu-item .ME {
      letter-spacing: -5px;
      overflow: visible;
  }
}

.fa-paper-plane {
  left: -2px;
}

.copyright .ME {
  letter-spacing: -4px;
  overflow: visible;
}

ul.menu.horizontal li {
  display: flex;
  margin-right: 0;
  margin-bottom: 15px;
}

@media only screen and (max-width: 991px) {
  ul.menu.horizontal li {
    justify-content: center;
  }
}

.start {
  position: sticky;
  width: 150px;
  z-index: 3;
  margin-top: -220px;
  left: calc(50% - 55px);
}

@media only screen and (max-width: 768px) {
  .start {
      margin-top: -45px;
  }
}

#mainNav {
  z-index: 4;
}

button.close-menu-btn:hover {
  color: #4a4a4a;
}

header.masthead .exploratory {
  z-index: 3;
  min-width: 100vw;
  max-width: 100vw;
  left: -200vw;
  background-color: white;
  opacity: 1;
  -webkit-animation: all 1s;
  -moz-animation: all 1s;
  -o-animation: all 1s;
  transition: all 1s;
}

header.masthead {
  left: 0;
  transition: all 1s;
}

@media only screen and (max-width: 991px) {
  div .copyright {
    padding-bottom: 80px;
  }
}

@media only screen and (max-width: 768px) {
  header.masthead .site-heading {
    padding-top: 45vw;
  }
}

@media only screen and (max-width: 650px) {
  header.masthead .site-heading {
    padding-top: 44vw;
  }
}

@media only screen and (max-width: 625px) {
  header.masthead .site-heading {
    padding-top: 43vw;
  }
}

@media only screen and (max-width: 610px) {
  header.masthead .site-heading {
    padding-top: 42vw;
  }
}

@media only screen and (max-width: 595px) {
  header.masthead .site-heading {
    padding-top: 41vw;
  }
}

@media only screen and (max-width: 580px) {
  header.masthead .site-heading {
    padding-top: 40vw;
  }
}

@media only screen and (max-width: 565px) {
  header.masthead .site-heading {
    padding-top: 39vw;
  }
}

@media only screen and (max-width: 550px) {
  header.masthead .site-heading {
    padding-top: 38vw;
  }
}

@media only screen and (max-width: 535px) {
  header.masthead .site-heading {
    padding-top: 37vw;
  }
}

@media only screen and (max-width: 520px) {
  header.masthead .site-heading {
    padding-top: 35vw;
  }
}

.rowContainer {
  position: relative;
  top: 200px;
  left: 96px;
}

.histoire {
  margin-bottom: 200px;
  overflow-wrap: break-word;
}

@media only screen and (max-width: 991px) {
  .rowContainer {
    top: 150px;
    left: 30px;
  }
}

.mdc-card {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.wiki-grid .mdc-card__media {
  width: 7vw;
}

.projects-grid .mdc-card__media {
  width: 42.5vw;
  height: 30vw;
}

@media only screen and (min-width: 750px) {
  .projects-grid .mdc-card__media {
    width: 20.5vw;
    background-size: contain;
  }
}

.projects-grid .mdc-card {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-animation: all 0.2s ease-in-out;
  -o-animation: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.projects-grid .mdc-card:hover {
  transform: scale(1.1);
}

.projects-grid .mdc-layout-grid__inner {
  display: flex;
  justify-content: center;
}

.mdc-card__primary-action {
  height: 100%;
}

.mdc-card__primary-action:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 0;
}

.mdc-card__media:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 0;
}

.mdc-card__media:last-child {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.projects-grid .mdc-card__primary-action:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.projects-grid .mdc-card__media:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.projects-grid .mdc-card__media:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.projects-grid .mdc-card__primary-action {
  flex-direction: column;
}

.projects-grid .mdc-card__primary-action::before {
  background-color: #000;
  opacity: 0;
}

.projects-grid .mdc-card__primary-action:hover::before, .projects-grid .mdc-card__primary-action:active::before, .projects-grid .mdc-card__primary-action:focus::before {
  opacity: 0;
}

.projects-grid .summary {
  margin-left: 0;
  padding: 15px;
  color: white;
  position: relative;
  z-index: 2;
  width: 100%;
  height: 100%;
}

.projects-grid a {
  text-decoration: none;
}

.projects-grid .summary:hover, .projects-grid .summary:active, .projects-grid .summary:focus {
  color: #ff0007;
}

.projects-grid .display, .wiki-grid .display {
  display: flex;
  flex-direction: row;
  overflow-wrap: break-word;
}

.summary {
  margin-left: 15px;
  width: 70%;
  height: 7vw;
  overflow: hidden;
  transition: all 0.5s;
}


@media only screen and (max-width: 1099px) {
  .wiki-grid .mdc-card__media {
    width: 77px;
  }
  .summary {
    height: 77px;
  }
}

.summary.expanded {
  overflow: scroll;
  height: 80vh;
}

.mdc-icon-button, .mdc-card__action--icon, button.mdc-card__action--icon {
  padding: 0;
}

@media only screen and (max-width: 699px) {
  .mdc-button {
    font-size: 2.9vw;
  }
}

button.mdc-card__action--icon:hover {
  background-color: transparent;
}

.mdc-card__action--icon .stroke-transparent {
  -webkit-text-stroke: 1px rgba(0, 0, 0, .6);
  -webkit-text-fill-color: transparent;
  color: white;
  font-size: 24px;
}

.mdc-card__action--icon .stroke-transparent:hover {
  -webkit-text-stroke: 1px rgba(219, 0, 0, 0.6);;
  -webkit-text-fill-color: transparent;
  color: white;
}

.hearted .stroke-transparent, .hearted .stroke-transparent:hover {
  -webkit-text-stroke: none;
  -webkit-text-fill-color: rgba(0, 0, 0, .6);
  color: rgba(0, 0, 0, .6);
}

.wp-block-columns {
  display: flex;
}
/* ... */

